--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <link href="https://fonts.googleapis.com/css?family=Arvo|Josefin+Sans" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
-</head>
+<link href="styles.49a05f5cab54d2f16025.bundle.css" rel="stylesheet"/></head>
 <body>
   <app-root>Loading...</app-root>
-</body>
+<script type="text/javascript" src="inline.ed27456977b5bab45bd9.bundle.js"></script><script type="text/javascript" src="polyfills.81ed681e29bd26c517a4.bundle.js"></script><script type="text/javascript" src="vendor.1077ea635ce60f2f8b6d.bundle.js"></script><script type="text/javascript" src="main.29b1a3d691516a5ae6a1.bundle.js"></script></body>
 </html>
